chore: refactor backups to archiver/unzipper libs

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "devDependencies": {
         "@electron/packager": "^18.3.6",
         "@electron/rebuild": "^3.7.1",
+        "@types/archiver": "^6.0.3",
         "@types/express": "^4.17.21",
         "@types/luxon": "^3.1.0",
         "@types/node": "^20.17.12",
+        "@types/unzipper": "^0.10.11",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^33.3.1",
@@ -68,6 +70,7 @@
         "angularjs-color-picker": "^3.4.8",
         "angularjs-scroll-glue": "^2.2.0",
         "angularjs-slider": "^6.7.0",
+        "archiver": "^7.0.1",
         "body-parser": "^1.19.0",
         "client-oauth2": "^4.3.3",
         "cm-resize": "^1.0.1",
@@ -88,7 +91,6 @@
         "express": "^4.21.2",
         "expressionish": "github:SReject/expressionish#d277e5d959e5b0cdf50a38a182016752a0de9dd6",
         "extra-life-ts": "^0.4.0",
-        "fflate": "^0.8.1",
         "firebot-nutjs": "github:crowbartools/firebot-nutjs#f52581d4c4426cf7f4dcc2b0d26cf56777e115f8",
         "form-data": "^4.0.0",
         "fs-extra": "^11.2.0",
@@ -115,6 +117,7 @@
         "socket.io-client": "^2.3.0",
         "tiny-typed-emitter": "^2.1.0",
         "tinycolor2": "^1.6.0",
+        "unzipper": "^0.12.3",
         "uuid": "^11.0.3",
         "winston": "^2.4.4",
         "winston-daily-rotate-file": "^1.7.2",
