feat: listen for extension chat messages via undocumented "hermes" websocket

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "node-json-db": "^1.4.1",
         "node-xlsx": "^0.24.0",
         "obs-websocket-js": "^5.0.5",
+        "reconnecting-websocket": "^4.4.0",
         "request": "^2.85.0",
         "roll": "^1.2.0",
         "sanitize-filename": "^1.6.3",
