--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ user-settings
 app-settings
 scripts
 *.css
-!/*/*/effect-queue-monitor/*.css
+!/*/*/effect-queue-monitor/styles/*.css
 *.scssc
 .env
 resources/overlay/js/port.js
