--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -39,10 +39,10 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "firebot-types": "*",
-    "framer-motion": "^11.11.1",
     "howler": "^2.2.4",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
+    "motion": "^12.23.3",
     "next": "14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
