--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jest": "29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "29.2.5",
-    "turbo": "^2.1.3",
+    "turbo": "^2.5.4",
     "typescript": "^5.6.2"
   },
   "engines": {
@@ -35,9 +35,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "patch-package": "^8.0.0",
     "@nestjs/platform-ws": "^10.4.4",
-    "@nestjs/websockets": "^10.4.4"
+    "@nestjs/websockets": "^10.4.4",
+    "patch-package": "^8.0.0"
   },
   "packageManager": "npm@10.8.2"
 }
