chore: add sreject's node-appdmg fork as an override

--- a/package.json
+++ b/package.json
@@ -124,10 +124,12 @@
         "ws": "^8.2.2",
         "yargs-parser": "^21.1.1"
     },
+    "overrides": {
+        "appdmg": "github:SReject/node-appdmg#1f5eaeb054a74ec917db7c75a8619b6d009f0f73"
+    },
     "optionalDependencies": {
         "@dennisrijsdijk/electron-installer-redhat": "^3.5.0",
-        "electron-installer-debian": "^3.2.0",
-        "electron-installer-dmg": "github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb"
+        "electron-installer-debian": "^3.2.0"
     },
     "volta": {
         "node": "20.18.1",
