--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@electron/packager": "^18.3.6",
         "@electron/rebuild": "^3.7.1",
+        "@octokit/rest": "^22.0.0",
         "@types/archiver": "^6.0.3",
         "@types/express": "^4.17.21",
         "@types/luxon": "^3.1.0",
