feat(overlay-widgets): "Text" widget
#3283

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "timers",
         "hotkeys",
         "quick-actions",
+        "overlay-widgets",
         "chat",
         "conditionals",
         "restrictions",
