--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@octokit/rest": "^22.0.0",
         "@stylistic/eslint-plugin": "^5.4.0",
         "@types/archiver": "^6.0.3",
+        "@types/escape-html": "^1.0.4",
         "@types/express": "^5.0.3",
         "@types/luxon": "^3.7.1",
         "@types/node": "^22.18.0",
@@ -91,6 +92,7 @@
         "electron-oauth2": "^3.0.0",
         "electron-regedit": "^2.0.0",
         "electron-window-state": "^5.0.3",
+        "escape-html": "^1.0.3",
         "eventsource": "^1.0.7",
         "express": "^5.1.0",
         "expressionish": "github:SReject/expressionish#d277e5d959e5b0cdf50a38a182016752a0de9dd6",
