chore: dice processor to TS

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/express": "^5.0.3",
         "@types/luxon": "^3.7.1",
         "@types/node": "^22.18.0",
+        "@types/roll": "^1.2.3",
         "@types/sprintf-js": "^1.1.4",
         "@types/unzipper": "^0.10.11",
         "@types/yargs-parser": "^21.0.3",
